test/compile-fail/fn__unknown_ret_type.he
fn main : a_type //~ ERROR 3004
{
    ret 0;
}
